[tool.poetry]
name = "fastapi-zip"
version = "0.1.0"
description = "Test"
authors = ["hello"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
